tests/typing/bad/testfile-assign-6.c

struct S { int a; };
int main() { int x; struct S s; s = x; }
